--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <!-- Header -->
   <header>
     <h1>Welcome to BakeEase</h1>
     <nav>
@@ -21,6 +22,7 @@
     </nav>
   </header>
 
+  <!-- Hero Section -->
   <main>
     <section class="intro">
       <h2>Freshly Baked Goodness, Just a Click Away!</h2>
@@ -28,16 +30,48 @@
       <a href="products.html" class="button">Explore Our Menu</a>
     </section>
 
+    <!-- Product Preview Section -->
     <section class="highlights">
+      <h3>Popular Picks</h3>
+      <div class="product-grid">
+        <article class="product-card">
+          <img src="images/chocolate_cake.jpg" alt="Chocolate Cake" />
+          <h4>Chocolate Indulgence</h4>
+          <p>Rich and moist chocolate cake topped with ganache.</p>
+          <p><strong>RM80</strong></p>
+          <a href="product-detail.html" class="button">View Details</a>
+        </article>
+
+        <article class="product-card">
+          <img src="images/cheesecake.jpg" alt="Cheesecake" />
+          <h4>Classic Cheesecake</h4>
+          <p>Creamy and smooth with a crunchy biscuit base.</p>
+          <p><strong>RM90</strong></p>
+          <a href="product-detail.html" class="button">View Details</a>
+        </article>
+
+        <article class="product-card">
+          <img src="images/pandan_gula_melaka.jpg" alt="Pandan Cake" />
+          <h4>Pandan Gula Melaka</h4>
+          <p>Fluffy pandan layers with sweet palm sugar drizzle.</p>
+          <p><strong>RM85</strong></p>
+          <a href="product-detail.html" class="button">View Details</a>
+        </article>
+      </div>
+    </section>
+
+    <!-- Why Choose Us -->
+    <section class="why-choose">
       <h3>Why Choose Us?</h3>
       <ul>
-        <li>✅ 100% Fresh Ingredients</li>
-        <li>✅ Baked Daily</li>
-        <li>✅ Local Delivery Available</li>
+        <li>✅ Baked fresh daily</li>
+        <li>✅ Premium ingredients</li>
+        <li>✅ Fast delivery in your area</li>
       </ul>
     </section>
   </main>
 
+  <!-- Footer -->
   <footer>
     <p>&copy; 2025 BakeEase Bakery. All rights reserved.</p>
   </footer>
