--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 
     <section>
       <h3>Find Us:</h3>
-      <iframe src="https://maps.google.com/maps?q=MMU%20Cyberjaya&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="250" frameborder="0"></iframe>
+      <iframe src="https://www.google.com/maps/place/Multimedia+University/@2.2494935,102.2761136,17z/data=!3m1!4b1!4m6!3m5!1s0x31d1e56b9710cf4b:0x66b6b12b75469278!8m2!3d2.2494935!4d102.2761136!16s%2Fg%2F11r9l2d7s?entry=ttu&g_ep=EgoyMDI1MDUwNy4wIKXMDSoASAFQAw%3D%3D" width="100%" height="250" frameborder="0"></iframe>
     </section>
   </main>
 
