--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
   <!-- Header -->
   <header>
-    <h1>Welcome to BakeEase</h1>
+    <img src="images/logo.png" alt="BakeEase Logo" class="logo" />
+    <h1>Welcome to BakeEase Bakery</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
