--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <!-- Header -->
   <header>
-    <img src="images/logo.png" alt="BakeEase Logo" class="logo" />
+    <img src="images/logo.jpg" alt="BakeEase Logo" class="logo" />
     <h1>Welcome to BakeEase Bakery</h1>
     <nav>
       <ul>
