--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 <body>
   <!-- Header -->
   <header>
-    <img src="images/logo.png" alt="BakeEase Logo" class="logo" />
-    <h1>Welcome to BakeEase Bakery</h1>
-    <nav>
+    <div class="header-flex">
+    <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" />
+    <form class="search-form" action="products.html" method="get">
+      <input type="text" name="search" placeholder="Search for cakes..." />
+      <button type="submit">Welcome To BakeEase Bakery</button>
+    </form>
+  </div>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
