--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="header-flex">
     <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" />
     <form class="search-form" action="products.html" method="get">
-      <input type="text" name="search" placeholder="Search for cakes..." />
-      <button type="submit">Welcome To BakeEase Bakery</button>
+      <input type="text" name="search" placeholder="Welcome To BakeEase Bakery" />
+      <button type="submit">Search</button>
     </form>
   </div>
       <ul>
