--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 <body>
   <!-- Header -->
   <header>
-    <div class="header-flex">
+    <div class="header-top">
     <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" />
     <form class="search-form" action="products.html" method="get">
       <input type="text" name="search" placeholder="Welcome To BakeEase Bakery" />
       <button type="submit">Search</button>
     </form>
   </div>
-      <ul>
+    <nav>
+      <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="products.html">Products</a></li>
