--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
       <button type="submit">Search</button>
     </form>
   </div>
+
+  <div class="header-icons">
+  <a href="login.html" title="Profile">
+    <img src="images/user-icon.png" alt="Profile" class="icon" />
+  </a>
+  <a href="cart.html" title="Cart">
+    <img src="images/cart-icon.png" alt="Cart" class="icon" />
+  </a>
+</div>
+
     <nav>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
