--- a/index.html
+++ b/index.html
@@ -18,12 +18,16 @@
   </div>
 
   <div class="header-icons">
-  <a href="login.html" title="Profile">
-    <img src="images/user-icon.png" alt="Profile" class="icon" />
-  </a>
-  <a href="cart.html" title="Cart">
-    <img src="images/cart-icon.png" alt="Cart" class="icon" />
-  </a>
+  <a href="login.html" title="Profile" class="icon-link">👤</a>
+  <a href="cart.html" title="Cart" class="icon-link">🛒</a>
+</div>
+
+<div class="profile-dropdown">
+  <span class="profile-icon" id="profileToggle" title="Profile">👤</span>
+  <div class="dropdown-menu" id="profileMenu">
+    <a href="register.html">Sign Up</a>
+    <a href="login.html">Login</a>
+  </div>
 </div>
 
     <nav>
