--- a/products.html
+++ b/products.html
@@ -23,30 +23,79 @@
 
   <main>
     <section class="product-grid">
-      <article class="product-card">
-        <img src="images/chocolate_cake.jpg" alt="Chocolate Cake" />
-        <h3>Chocolate Indulgence</h3>
-        <p>Rich and moist chocolate cake topped with ganache.</p>
-        <p><strong>Price:</strong> RM80</p>
-      </article>
+  <article class="product-card" data-name="Chocolate Indulgence" data-desc="rich chocolate cake ganache">
+    <img src="images/chocolate_cake.jpg" alt="Chocolate Cake" />
+    <h4>Chocolate Indulgence</h4>
+    <p>Rich and moist chocolate cake topped with ganache.</p>
+    <p><strong>RM80</strong></p>
+    <a href="product-detail.html" class="button">View Details</a>
+  </article>
 
-      <article class="product-card">
-        <img src="images/cheesecake.jpg" alt="Cheesecake" />
-        <h3>Classic Cheesecake</h3>
-        <p>Creamy cheesecake with a buttery biscuit base.</p>
-        <p><strong>Price:</strong> RM90</p>
-      </article>
+  <article class="product-card" data-name="Classic Cheesecake" data-desc="creamy smooth cheese dessert">
+    <img src="images/cheesecake.jpg" alt="Cheesecake" />
+    <h4>Classic Cheesecake</h4>
+    <p>Creamy cheesecake with a buttery biscuit base.</p>
+    <p><strong>RM90</strong></p>
+    <a href="product-detail.html" class="button">View Details</a>
+  </article>
 
-      <article class="product-card">
-        <img src="images/pandan_gula_melaka.jpg" alt="Pandan Gula Melaka Cake" />
-        <h3>Pandan Gula Melaka</h3>
-        <p>Fragrant pandan cake layered with gula melaka syrup.</p>
-        <p><strong>Price:</strong> RM85</p>
-      </article>
+  <article class="product-card" data-name="Pandan Gula Melaka" data-desc="pandan gula melaka traditional">
+    <img src="images/pandan_gula_melaka.jpg" alt="Pandan Cake" />
+    <h4>Pandan Gula Melaka</h4>
+    <p>Fragrant pandan cake layered with gula melaka syrup.</p>
+    <p><strong>RM85</strong></p>
+    <a href="product-detail.html" class="button">View Details</a>
+  </article>
 
-      <!-- Add more product cards as needed -->
-    </section>
-  </main>
+  <article class="product-card" data-name="Red Velvet Delight" data-desc="red velvet cream cheese">
+    <img src="images/red_velvet.jpg" alt="Red Velvet Cake" />
+    <h4>Red Velvet Delight</h4>
+    <p>Moist red velvet cake layered with smooth cream cheese frosting.</p>
+    <p><strong>RM95</strong></p>
+    <a href="product-detail.html" class="button">View Details</a>
+  </article>
+
+  <article class="product-card" data-name="Tiramisu Classic" data-desc="espresso mascarpone dessert">
+    <img src="images/tiramisu.jpg" alt="Tiramisu" />
+    <h4>Tiramisu Classic</h4>
+    <p>Layered dessert with espresso-soaked sponge and mascarpone cream.</p>
+    <p><strong>RM98</strong></p>
+    <a href="product-detail.html" class="button">View Details</a>
+  </article>
+
+  <article class="product-card" data-name="Mango Mousse Cake" data-desc="light mango mousse tropical">
+    <img src="images/mango_mousse.jpg" alt="Mango Mousse Cake" />
+    <h4>Mango Mousse Cake</h4>
+    <p>Light and airy mango mousse layered over sponge cake base.</p>
+    <p><strong>RM88</strong></p>
+    <a href="product-detail.html" class="button">View Details</a>
+  </article>
+
+  <article class="product-card" data-name="Blueberry Crumble" data-desc="blueberry crumb topping">
+    <img src="images/blueberry_crumble.jpg" alt="Blueberry Crumble" />
+    <h4>Blueberry Crumble</h4>
+    <p>Sweet and tart blueberry filling with buttery crumble topping.</p>
+    <p><strong>RM75</strong></p>
+    <a href="product-detail.html" class="button">View Details</a>
+  </article>
+
+  <article class="product-card" data-name="Carrot Walnut Cake" data-desc="carrot walnut cinnamon">
+    <img src="images/carrot_walnut.jpg" alt="Carrot Walnut Cake" />
+    <h4>Carrot Walnut Cake</h4>
+    <p>Spiced carrot cake with crunchy walnuts and cream cheese frosting.</p>
+    <p><strong>RM85</strong></p>
+    <a href="product-detail.html" class="button">View Details</a>
+  </article>
+
+  <article class="product-card" data-name="Mocha Buttercream Cake" data-desc="mocha buttercream chocolate">
+    <img src="images/mocha_buttercream.jpg" alt="Mocha Cake" />
+    <h4>Mocha Buttercream Cake</h4>
+    <p>Decadent chocolate cake filled with rich mocha buttercream.</p>
+    <p><strong>RM92</strong></p>
+    <a href="product-detail.html" class="button">View Details</a>
+  </article>
+</section>
+</main>
 
   <footer>
     <p>&copy; 2025 BakeEase Bakery. All rights reserved.</p>
