--- a/products.html
+++ b/products.html
@@ -15,8 +15,6 @@
         <li><a href="about.html">About Us</a></li>
         <li><a href="products.html">Products</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="register.html">Sign Up</a></li>
-        <li><a href="login.html">Login</a></li>
       </ul>
     </nav>
   </header>
@@ -48,7 +46,7 @@
   </article>
 
   <article class="product-card" data-name="Red Velvet Delight" data-desc="red velvet cream cheese">
-    <img src="images/red_velvet.jpg" alt="Red Velvet Cake" />
+    <img src="images/red_velvet.webp" alt="Red Velvet Cake" />
     <h4>Red Velvet Delight</h4>
     <p>Moist red velvet cake layered with smooth cream cheese frosting.</p>
     <p><strong>RM95</strong></p>
