--- a/product-detail.html
+++ b/product-detail.html
@@ -60,7 +60,7 @@
     </section>
 
     <section class="product-detail" data-index="3" style="display: none;">
-      <img src="images/red_velvet.jpg" alt="Red Velvet Delight">
+      <img src="images/red_velvet.webp" alt="Red Velvet Delight">
       <div>
         <h2>Red Velvet Delight</h2>
         <p>Moist red velvet layers with smooth cream cheese frosting, beautifully decorated for any celebration.</p>
