--- a/product-detail.html
+++ b/product-detail.html
@@ -10,7 +10,7 @@
   <header>
     <h1 id="productTitle">Our Cakes</h1>
     <nav>
-      <ul>
+      <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="products.html">Products</a></li>
         <li><a href="contact.html">Contact</a></li>
