--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Middle: Search (optional) -->
     <form class="search-form" action="products.html" method="get">
-      <input type="text" name="search" placeholder="Search for cakes..." />
+      <input type="text" name="search" placeholder="Welcome To BakeEase Bakery" />
       <button type="submit">Search</button>
     </form>
 
