--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
   <!-- Header -->
   <header>
   <div class="header-bar">
-    <!-- Left: Logo -->
+    <div class="logo-search">
     <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" />
-
-    <!-- Middle: Search (optional) -->
     <form class="search-form" action="products.html" method="get">
       <input type="text" name="search" placeholder="Welcome To BakeEase Bakery" />
       <button type="submit">Search</button>
