--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       <input type="text" name="search" placeholder="Welcome To BakeEase Bakery" />
       <button type="submit">Search</button>
     </form>
+    <div>
+  </div>
 
     <!-- Right: Navigation + Icons -->
     <div class="header-right">
