--- a/index.html
+++ b/index.html
@@ -10,41 +10,40 @@
   <!-- Header -->
   <header>
   <div class="header-bar">
+    <!-- Logo + Search Centered -->
     <div class="logo-search">
-    <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" />
-    <form class="search-form" action="products.html" method="get">
-      <input type="text" name="search" placeholder="Welcome To BakeEase Bakery" />
-      <button type="submit">Search</button>
-    </form>
-    <div>
-  </div>
+      <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" />
+      <form class="search-form" action="products.html" method="get">
+        <input type="text" name="search" placeholder="Welcome To BakeEase Bakery" />
+        <button type="submit">Search</button>
+      </form>
+    </div>
 
-    <!-- Right: Navigation + Icons -->
+    <!-- Right Side Icons: Menu, Cart, Profile -->
     <div class="header-right">
       <div class="nav-dropdown">
-  <span class="nav-toggle" id="navToggle">☰</span>
-  <div class="dropdown-menu" id="navMenu">
-    <a href="index.html">Home</a>
-    <a href="products.html">Products</a>
-    <a href="about.html">About Us</a>
-    <a href="contact.html">Contact</a>
-  </div>
-</div>
-
-      <div class="header-icons">
-        <div class="cart-dropdown">
-          <span class="cart-icon" id="cartToggle">🛒</span>
-          <div class="dropdown-menu" id="cartMenu">
-            <a href="cart.html">View Cart</a>
-            <a href="checkout.html">Checkout</a>
-          </div>
+        <span class="nav-toggle" id="navToggle">☰</span>
+        <div class="dropdown-menu" id="navMenu">
+          <a href="index.html">Home</a>
+          <a href="products.html">Products</a>
+          <a href="about.html">About Us</a>
+          <a href="contact.html">Contact</a>
         </div>
-        <div class="profile-dropdown">
-          <span class="profile-icon" id="profileToggle">👤</span>
-          <div class="dropdown-menu" id="profileMenu">
-            <a href="register.html">Sign Up</a>
-            <a href="login.html">Login</a>
-          </div>
+      </div>
+
+      <div class="cart-dropdown">
+        <span class="cart-icon" id="cartToggle">🛒</span>
+        <div class="dropdown-menu" id="cartMenu">
+          <a href="cart.html">View Cart</a>
+          <a href="checkout.html">Checkout</a>
+        </div>
+      </div>
+
+      <div class="profile-dropdown">
+        <span class="profile-icon" id="profileToggle">👤</span>
+        <div class="dropdown-menu" id="profileMenu">
+          <a href="register.html">Sign Up</a>
+          <a href="login.html">Login</a>
         </div>
       </div>
     </div>
