--- a/products.html
+++ b/products.html
@@ -9,13 +9,41 @@
 <body>
   <header>
     <h1>Our Delicious Cakes</h1>
-    <nav>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+  <div class="header-bar">
+    <!-- Logo only -->
+    <div class="logo-search">
+      <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" />
+    </div>
+
+    <!-- Right: Nav, Cart, Profile -->
+    <div class="header-right">
+      <div class="nav-dropdown">
+        <span class="nav-toggle" id="navToggle">☰</span>
+        <div class="dropdown-menu" id="navMenu">
+          <a href="index.html">Home</a>
+          <a href="products.html">Products</a>
+          <a href="about.html">About Us</a>
+          <a href="contact.html">Contact</a>
+        </div>
+      </div>
+
+      <div class="cart-dropdown">
+        <span class="cart-icon" id="cartToggle">🛒</span>
+        <div class="dropdown-menu" id="cartMenu">
+          <a href="cart.html">View Cart</a>
+          <a href="checkout.html">Checkout</a>
+        </div>
+      </div>
+
+      <div class="profile-dropdown">
+        <span class="profile-icon" id="profileToggle">👤</span>
+        <div class="dropdown-menu" id="profileMenu">
+          <a href="register.html">Sign Up</a>
+          <a href="login.html">Login</a>
+        </div>
+      </div>
+    </div>
+  </div>
   </header>
 
   <main>
@@ -106,5 +134,33 @@
   <footer>
     <p>&copy; 2025 BakeEase Bakery. All rights reserved.</p>
   </footer>
+  <script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const toggles = [
+      { btn: "navToggle", menu: "navMenu" },
+      { btn: "cartToggle", menu: "cartMenu" },
+      { btn: "profileToggle", menu: "profileMenu" },
+    ];
+
+    toggles.forEach(({ btn, menu }) => {
+      const toggle = document.getElementById(btn);
+      const menuEl = document.getElementById(menu);
+
+      if (toggle && menuEl) {
+        toggle.addEventListener("click", (e) => {
+          e.stopPropagation();
+          menuEl.style.display = menuEl.style.display === "block" ? "none" : "block";
+        });
+      }
+    });
+
+    document.addEventListener("click", () => {
+      toggles.forEach(({ menu }) => {
+        const el = document.getElementById(menu);
+        if (el) el.style.display = "none";
+      });
+    });
+  });
+</script>
 </body>
 </html>
