--- a/product-detail.html
+++ b/product-detail.html
@@ -8,11 +8,11 @@
 </head>
 <body>
   <header>
-    <h1 id="productTitle">Our Cakes</h1>
   <div class="header-bar">
     <!-- Logo only -->
     <div class="logo-search">
       <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" />
+      <h1 id="page-heading">Our Cakes</h1>
     </div>
 
     <!-- Right: Nav, Cart, Profile -->
