--- a/product-detail.html
+++ b/product-detail.html
@@ -167,10 +167,10 @@
   </main>
 
   <div class="product-controls">
-    <button id="prevBtn">←</button>
-    <span id="pageIndicator">1 / 9</span>
-    <button id="nextBtn">→</button>
-  </div>
+  <button id="prevBtn" class="product-nav-left">←</button>
+  <span id="pageIndicator">1 / 9</span>
+  <button id="nextBtn" class="product-nav-right">→</button>
+</div>
 
   <footer>
     <p>&copy; 2025 BakeEase Bakery</p>
