--- a/product-detail.html
+++ b/product-detail.html
@@ -166,10 +166,19 @@
     </section>
   </main>
 
-  <div class="product-controls">
-  <button id="prevBtn" class="product-nav-left">←</button>
+  <div class="product-viewer">
+  <button id="prevBtn" class="product-nav-side">←</button>
+
+  <main id="productContainer">
+    <!-- your <section class="product-detail">...</section> blocks go here -->
+  </main>
+
+  <button id="nextBtn" class="product-nav-side">→</button>
+</div>
+
+<!-- Optional page indicator below -->
+<div class="product-indicator">
   <span id="pageIndicator">1 / 9</span>
-  <button id="nextBtn" class="product-nav-right">→</button>
 </div>
 
   <footer>
