--- a/product-detail.html
+++ b/product-detail.html
@@ -170,13 +170,12 @@
   <button id="prevBtn" class="product-nav-side">←</button>
 
   <main id="productContainer">
-    <!-- your <section class="product-detail">...</section> blocks go here -->
+    <!-- Product detail sections go here -->
   </main>
 
   <button id="nextBtn" class="product-nav-side">→</button>
 </div>
 
-<!-- Optional page indicator below -->
 <div class="product-indicator">
   <span id="pageIndicator">1 / 9</span>
 </div>
