--- a/product-detail.html
+++ b/product-detail.html
@@ -166,9 +166,10 @@
     </section>
   </main>
 
-  <div class="product-viewer">
-  <button id="prevBtn" class="product-nav-side">←</button>
-  <button id="nextBtn" class="product-nav-side">→</button>
+  <div class="viewer-container">
+  <button class="nav-btn left-btn">&#8592;</button>
+  <img src="your-image.jpg" alt="Cake" class="main-image">
+  <button class="nav-btn right-btn">&#8594;</button>
 </div>
 
 <div class="product-indicator">
