--- a/product-detail.html
+++ b/product-detail.html
@@ -166,10 +166,14 @@
     </section>
   </main>
 
-  <div class="viewer-container">
-  <button class="nav-btn left-btn">&#8592;</button>
-  <img src="your-image.jpg" alt="Cake" class="main-image">
-  <button class="nav-btn right-btn">&#8594;</button>
+  <div class="product-viewer">
+  <button id="prevBtn" class="product-nav-side">←</button>
+
+  <main id="productContainer">
+    <!-- Product detail sections go here -->
+  </main>
+
+  <button id="nextBtn" class="product-nav-side">→</button>
 </div>
 
 <div class="product-indicator">
