--- a/product-detail.html
+++ b/product-detail.html
@@ -45,8 +45,7 @@
     </div>
   </div>
   </header>
-
-  <main id="productContainer">
+<div class="product-viewer">
     <section class="product-detail" data-index="0">
       <img src="images/chocolate_cake.jpg" alt="Chocolate Indulgence Cake" />
       <div>
@@ -164,8 +163,7 @@
         <a href="cart.html" class="button">Add to Cart</a>
       </div>
     </section>
-  </main>
-
+</div>
   <div class="product-viewer">
   <button id="prevBtn" class="product-nav-side" aria-label="Previous product">←</button>
   <div id="productContainer">
